--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@import "main.css";
 @import "todo.css";
 @import "bg.css";
+@import "clock.css";
